WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
25304
AX: Safari not identifying a secure text field
https://bugs.webkit.org/show_bug.cgi?id=25304
Summary
AX: Safari not identifying a secure text field
chris fleizach
Reported
2009-04-20 17:25:35 PDT
AXTitleUIElement is not being returned for secure text fields
Attachments
patch so secure text fields can return title ui elements
(4.33 KB, patch)
2009-04-20 18:13 PDT
,
chris fleizach
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
chris fleizach
Comment 1
2009-04-20 18:13:06 PDT
Created
attachment 29635
[details]
patch so secure text fields can return title ui elements
Darin Adler
Comment 2
2009-04-20 19:57:54 PDT
Comment on
attachment 29635
[details]
patch so secure text fields can return title ui elements r=me
chris fleizach
Comment 3
2009-04-21 09:20:45 PDT
http://trac.webkit.org/changeset/42713
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug