Bug 25304: AX: Safari not identifying a secure text field https://bugs.webkit.org/show_bug.cgi?id=25304

git-svn-id: svn://svn.chromium.org/blink/trunk@42713 bbb929c8-8fbe-4397-9dbb-9b2b20218538